# my-carry-on

./: .gitignore  README.md  biome.json  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  tailwind.config.js
.claude/: design-system-for-claude-code.md  settings.local.json
api/: Makefile  app.py  errors.py  extensions.py  models.py  pyproject.toml  pyrightconfig.json  requirements.txt  responses.py  seed.py
api/migrations/versions/: 3eecc118e35a_add_quantity_to_sub_items.py  476fac6a6ee9_add_chat_messages_table.py  a1b2c3d4e5f6_add_chat_sessions.py  a2043cab91c4_add_token_blocklist_and_auth_logs_tables.py  b9f00d4f3f23_initial_schema.py
api/models/: __init__.py  auth.py  bag.py  base.py  chat.py  trip.py  user.py
api/routes/: auth.py  bags.py  categories.py  chat.py  destinations.py  health.py  items.py  trips.py
api/services/: bag_service.py  categories_service.py  chat_service.py  session_service.py  trip_service.py  weather_service.py
api/services/ai/: __init__.py  base.py  gemini.py  history.py  provider.py
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/(app)/: layout.tsx  page.tsx
app/(auth)/: auth-layout.tsx
components/: active-trip-card.tsx  bag-items-table.tsx  chat-window.tsx  create-bag-modal.tsx  create-trip-modal.tsx  nav.tsx
components/bag-items-table/: constants.ts  index.tsx  item-table-edit.tsx  item-table-view.tsx  types.ts  use-bag-items.ts
docs/: api.md  architecture.md  erd.md  my-carry-on api.postman_collection.json  overview.md  setup.md
lib/: api.ts  constants.ts  queries.ts  styles.ts  utils.ts
(+24 files in other folders)
