[project]
name = "vercel-flask-starter"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "flask>=3.1,<4.0",
  "flask-login>=0.6.3",
  "flask-sqlalchemy>=3.1.1",
  "flask-migrate>=4.0.7",
  "psycopg[binary]>=3.3.4",
  "python-dotenv>=1.0.1",
  "gunicorn~=23.0.0",
  "bcrypt>=4.2.1"
]

[tool.setuptools]
py-modules = ["index", "app", "models", "extensions"]
